# CCDDrone

./: .gitignore  CCDControlDataTypes.hpp  CCDDApplyNewSettings.cpp  CCDDExpose.cpp  CCDDExposeC.cpp  CCDDPerformEraseProcedure.cpp  CCDDStartupAndErase.cpp  CCDDrone.cbp  CCDDroneEraseProcedure.cpp  CCDDroneNoErase.cpp  CCDDroneStart.cpp  CMakeLists.txt  FitsOps.cpp  FitsOps.hpp  LeachController.cpp  LeachController.hpp  LeachControllerClkBiasMethods.cpp  LeachControllerConfigHandler.cpp  LeachControllerExpose.cpp  LeachControllerExposeC.cpp  LeachControllerMiscHardwareProcedures.cpp  LeachControllerPlusSRS.cpp  LeachControllerTimingProcedures.cpp  README.md  SRSPowerSupplyController.cpp  SRSPowerSupplyController.hpp  SRSPowerSupplyDrone.cpp  SerialDeviceT.cpp  SerialDeviceT.hpp  UtilityFunctions.cpp  UtilityFunctions.hpp  VSubRampDown.cpp  branch-next.txt  setlibpath.sh
ArcAPI/ARC_API/3.5/ArcDeinterlaceJAPI/src/: arc_api_deinterlace_ArcDeinterlaceJAPI.h
ArcAPI/ARC_API/3.5/ArcDeviceJAPI/src/: arc_api_device_ArcDeviceJAPI.h
ArcAPI/ARC_API/3.5/ArcFitsFileJAPI/src/: arc_api_fits_ArcFitsFileJAPI.h
ArcAPI/ARC_API/3.5/CArcDevice/src/: ArcDefs.h  CLog.h  CStringList.h  Reg9056.h
ArcAPI/ARC_API/3.5/CArcDisplay/src/: ArcDisplayCAPI.h  CArcDisplay.h
ArcAPI/ARC_API/3.5/CArcImage/src/: DllMain.h
ArcAPI/CArcDeinterlace/src/: ArcDeinterlaceCAPI.h  CArcDeinterlace.h
ArcAPI/CArcDevice/src/: ArcDeviceCAPI.h  ArcOSDefs.h  CArcDevice.h  CArcPCI.h  CArcPCIBase.h  CArcPCIe.h  CConIFace.h  CExpIFace.h  DllMain.h  TempCtrl.h
ArcAPI/CArcFitsFile/src/: ArcFitsFileCAPI.h  CArcFitsFile.h  DllMain.h
ArcAPI/Release/apple_x64/: libCArcDeinterlace.dylib  libCArcDevice.dylib
CCDDrone/: ArcAPI35Ex_2.cpp  BiasReset.cpp  BiasReset.hpp  CCDDrone.cbp  CCDDroneSk.cpp  CCDDroneStart.cpp  CMakeLists.txt  README.md
CCDDrone/ArcAPI/ARC_API/3.5/ArcDisplayJAPI/src/: arc_api_display_ArcDisplayJAPI.h
CCDDrone/ArcAPI/ARC_API/3.5/ArcImageJAPI/src/: arc_api_image_ArcImageJAPI.h
CCDDrone/ArcAPI/ARC_API/3.5/ArcTiffFileJAPI/src/: arc_api_tiff_ArcTiffFileJAPI.h
CCDDrone/ArcAPI/ARC_API/3.5/CArcDeinterlace/src/: DllMain.h
CCDDrone/ArcAPI/ARC_API/3.5/CArcDevice/src/: CArcPCI.h  CArcTools.h  PCIRegs.h
CCDDrone/ArcAPI/ARC_API/3.5/CArcDisplay/src/: DllMain.h
CCDDrone/ArcAPI/ARC_API/3.5/CArcImage/src/: ArcImageCAPI.h  CArcImage.h
CCDDrone/ArcAPI/ARC_API/3.5/CArcTiffFile/src/: ArcTiffFileCAPI.h  CArcTiffFile.h  DllMain.h
CCDDrone/cmake_modules/: FindCFITSIO.cmake
Leach/asm/C4201/: .tim.asm.swp  Wine_tim  Wine_tim2  current.waveforms.1x1  current.waveforms.5x5L  current_skipper.waveforms  tim.asm  tim.ls  tim1x1.asm  tim1x1.lod  tim5x5.asm  tim5x5.lod  timCCD1_8.asm  timCCD_removedparts_1.asm  timboot.asm  timhdr.asm
config/: Config.ini  ConfigTemplate.ini  Config_DES.ini  FirstTest.ini
do_not_touch/: LastHashes.txt  LastSettings.ini
